ggmap 2.1
-------------------------------------------------------------------------

NEW FEATURES

* new argument darken added to ggmap which allows the user to put a shaded layer on top of maps.  this makes seeing color overlays easier.

CHANGES

* get_[google,osm,stamen,cloudmade] functions now check their arguments in the function themselves as opposed to using an alternative function for argument checking.
* ggmap arguments changed 
	a. fullpage and expand collapsed into one argument called extent
	b. b changed to padding.  using b now issues a warning. 
thanks to Jean-Olivier Irisson for the suggestions.
* deprecated syntaxes now properly call .Deprecated
* ggmap documentation greatly enhanced.

FIXES

* qmplot now properly scales the expand on the x and y axes. (Thanks to Jean-Olivier Irisson for the suggestion.)


ggmap 2.0
-------------------------------------------------------------------------

NEW FEATURES
 
* a vast array of new kinds of maps are available to the user.  these are based on stamen maps (http://maps.stamen.com/watercolor/) and cloudmade maps (http://maps.cloudmade.com/).  the latter allows for user-designed map rendering (http://maps.cloudmade.com/editor#).

* the full google static maps api is available to the user.  in particular, this allows for double the image resolution of google maps (which is also now the default).

* qmplot - a version of qplot (from ggplot2) which automatically determines, downloads, and plots the result on the appropriate map.  this function is still experimental.

* make_bbox - a function which determines an appropriate bounding box for a collection of longitude/latitude pairs.

CHANGES

* ggmap now imports all packages save ggplot2 instead of depending on them.
* ggmapplot no longer uses a textConnection for parsing base_layer.
* geocode fixes/changes :
	a. gcdf is no longer a global variable
	b. geocode now properly uses the google geocoding api (like revgeocode)